# sbt-aws

.github/workflows/: publish-to-test-pypi.yml
docs/public/: README.md
scripts/: sbt-aws.py  test-sbt-aws-py.sh
scripts/sbt-aws-cli-test/: .bump-version.cfg  pyproject.toml
scripts/sbt-aws-cli-testtt/: pyproject.toml
src/control-plane/auth/: cognito-auth.ts
