[tool.poetry]
name = "sbt-aws-cli-testtt"
version = "0.1.0"
description = ""
authors = ["ar-aws <roperia@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
requests = "^2.32.3"

[tool.poetry.scripts]
sbt-aws-cli-test = "sbt_aws_cli_testtt.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
